Fixed flash-messages hidden behind navbar.
Changed lowered message location after fixed navbar.

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -50,7 +50,7 @@ a:focus {
 
 .well-mess {
   height: 40px;
-  width: 394px;
+  width: 519px;
   background-color: #f2f2f2;
 }
 
